Fix unexpected cropping in profile name and description

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -19,7 +19,8 @@
 .profile__name {
   max-width: 420px;
   color: #212121;
-  margin: 0 0 12px;
+  padding-bottom: 12px;
+  margin: 0;
   font-size: 32px;
   font-weight: 500;
   line-height: 1;
@@ -35,6 +36,7 @@
   max-width: 420px;
   color: #212121;
   opacity: 0.7;
+  padding-bottom: 3px;
   margin: 0;
   font-size: 16px;
   font-weight: 500;
@@ -106,7 +108,8 @@
 
   .profile__name {
     max-width: 288px;
-    margin: 12px 0 6px;
+    margin-top: 12px;
+    padding-bottom: 6px;
     font-size: 20px;
     text-align: center;
   }
